samples/_failures_safe/1761511620_26609d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f65121e0.c: In function ‘main’:
./samples/SAFE/__tmp_f65121e0.c:147:9: error: expected declaration or statement at end of input
  147 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_f65121e0.c:147:9: error: expected declaration or statement at end of input
